# esp32ModbusRTU

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DEPENDENCY_FORMAT_ISSUE.md  IMPROVEMENTS.md  LOGGING.md  LOGINTERFACE_MIGRATION.md  MIGRATION_SUMMARY.md  PLATFORMIO_USAGE.md  README.md  SYMLINK_USAGE.md  WATCHDOG_CONTROL.md  WATCHDOG_CONTROL_NOT_WORKING.md  WATCHDOG_INIT_ISSUE.md  library.json  library.properties
.github/workflows/: ci.yml
docs/: INCLUDE_PATH_CONVENTION.md  MIGRATION_TO_V0.3.0.md
examples/C++11LoggingExample/: C++11LoggingExample.ino  platformio.ini
examples/DebugExample/: DebugExample.ino  platformio.ini
examples/LogInterfaceTest/: LogInterfaceTest.ino  platformio.ini
examples/SDM630/: SDM630.ino  platformio.ini
examples/SimpleExample/: SimpleExample.ino  platformio.ini
examples/watchdog_control/: platformio.ini  watchdog_control.ino
src/: ModbusMessage.cpp  ModbusMessage.h  esp32ModbusRTU.cpp  esp32ModbusRTU.h  esp32ModbusRTULogging.h  esp32ModbusTypeDefs.h
tests/: Test_ModbusMessage.cpp
tools/logger-migration/: MIGRATION_PLAN_OPTIONAL_LOGGER.md  QUICK_LOGGER_MIGRATION.md  README.md  migrate_logger.py
